--- a/src/plugins/home/public/application/components/homepage/_homepage.scss
+++ b/src/plugins/home/public/application/components/homepage/_homepage.scss
@@ -2,8 +2,26 @@
   // This is needed to make sure the page body is not wider than the page.
   // This is otherwise not possible with the props on EuiPageTemplate.
   padding: 0 $euiSizeL;
+  padding-top: $euiSizeL;
+  padding-bottom: $euiSizeXL;
 }
 
 .home-homepage-body--fill {
   min-height: $euiSize * 50;
+}
+
+.homeAranciaBanner {
+  margin-bottom: $euiSizeL;
+}
+
+.homeAranciaHero {
+  margin-bottom: $euiSizeL;
+}
+
+.homeAranciaSection {
+  margin-top: $euiSizeL;
+}
+
+.homeAranciaSection__title {
+  margin: 0;
 }
